--- a/css/style.scss
+++ b/css/style.scss
@@ -431,6 +431,7 @@ hr{
         margin: 0.5em;
         position: relative;
         overflow: hidden;
+        padding: 0;
 
         &:hover{
             .content .bookmark{
