--- a/css/controls.scss
+++ b/css/controls.scss
@@ -225,7 +225,7 @@ body{
     border-radius: 1em;
 }
 
-input[type=checkbox]:not(input.toggle){
+input[type=checkbox]:not(.toggle){
     position: relative;
     appearance: none;
     outline: none;
